CRUDDocumentPhysicalTest was fixed.